# wasm-jit

./: .gitignore  Cargo.toml  LICENSE  README.md  canvas.html  draw.html  index.html
.cargo/: config.toml
.github/workflows/: ci.yml
api-server/: Cargo.toml  form-schema.json  layout-schema.json  live-schema.json
api-server/src/: main.rs
apps/: analyst.html  genapp.html  reservoirs-native.html  reservoirs-net.html  reservoirs-solid.html  reservoirs.html  scene.dsl  weather.dsl
apps/assets/: coast.json  country-temp.csv  global-temp.csv  loan_schema.json  seed_app.json  words.json
assemblyscript/: package-lock.json  package.json
assemblyscript/assembly/: buddha.ts
assemblyscript/assembly/inhabitants/: boat.ts  fisherman.ts
deploy/: README.md  arcana-world.nginx  arcana-world.service
docs/: GROWN.md  architecture-anatomy.en.html  architecture-anatomy.html  being-capabilities.html  dialogue-on-consciousness-and-wondrous-function.zh-TW.md  dialogue-on-time-and-the-cold-river.zh-TW.md  huayan-reading.md  looking-inward.md  multidimensional-composition-architecture.md  multidimensional-composition-architecture.zh-TW.md  research-statement.md
examples/: accent.dsl  audit_as.rs  buddha.dsl  draw-sdf-raymarch-2.dsl  draw-sdf-raymarch.dsl  draw3d-windmill.dsl  draw3d.dsl  draw_seed.rs  guanyin.dsl  homepage-dark.dsl  homepage-light.dsl  homepage.dsl  indranet.dsl  interactive.dsl  mc3p.dsl  minecraft.dsl  shader-sdf-raymarch.dsl  sound-coldriver.dsl
gen-server/: Cargo.toml  contract.md  feeds-allow.txt  live-gen.html  run.sh
gen-server/seed-vocab/: lantern.dsl  lotus.dsl  pavilion.dsl  pine.dsl  stone.dsl
gen-server/src/: auth.rs  beings_mem.rs  main.rs  metrics.rs
inhabitants/boat/: behavior.wasm  manifest.json
inhabitants/fisherman/: behavior.wasm  manifest.json
leptos-poc/: Cargo.toml  index.html
leptos-poc/src/: bus.rs  cell.rs  draw_tab.rs  form.rs  layout.rs  live_tab.rs  main.rs  patch.rs  spectrum_tab.rs  supervisor.rs  tokens.rs  tokens_tab.rs
leptos-poc/styles/: main.scss  tokens.scss
loan-server/: Cargo.toml  README.md  compare.html  index.html
loan-server/examples/: reveal.rs
loan-server/src/: main.rs
pkg-dust/: shengchen.wasm
research/: PREREGISTRATION.md  ROADMAP.md
research/redteam/: attacks.jsonl  run.py
shengchen/: Cargo.toml
shengchen/examples/: demo.rs
shengchen/src/: lib.rs  zhuyin.rs
skins/: Cargo.toml
skins-grown/: bell.dsl  bird.dsl  bird2.dsl  bridge.dsl  crow.dsl  fish.dsl  lotus.dsl  maple.dsl  moon.dsl  rower.dsl  star.dsl  temple.dsl  w.dsl  walker.dsl
skins/src/: lib.rs
src/: audit.rs  codegen.rs  lib.rs  parser.rs
tools/: being-distill.py  being-embed.py
web-home/: build_home.py  gen_seeds.py  index.html  index.zh.html  nginx-home.locations
widgets-grown/: knob.dsl
worlds/: moon3-spring.json  moon3.json  moon4.json
