[package]
name = "wasm-jit"
version = "0.1.0"
edition = "2021"
description = "Runtime script→WASM codegen: the browser engine JITs it, a capability sandbox contains it"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
wasm-encoder = "0.252.0"
wasmparser = "0.252.0"

[features]
# 預設 = 含 wasm-bindgen JS 匯出(benchmark/canvas 頁、wasm-pack 用)。
# 下游只要純編譯器(parser+codegen+audit)時 default-features = false → 零 wasm-bindgen 匯出。
default = ["js-api"]
js-api = ["dep:wasm-bindgen", "dep:js-sys"]

[profile.release]
opt-level = 3


[workspace]
members = [".", "leptos-poc", "api-server"]
resolver = "2"
