[package]
name = "wasm-jit"
version = "0.1.0"
edition = "2021"
description = "Runtime script→WASM codegen: the browser engine JITs it, a capability sandbox contains it"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
wasm-encoder = "0.252.0"
wasmparser = "0.252.0"

[features]
# Default = includes the wasm-bindgen JS exports (for the benchmark/canvas pages, used by wasm-pack).
# When a downstream only wants the pure compiler (parser+codegen+audit), default-features = false → zero wasm-bindgen exports.
default = ["js-api"]
js-api = ["dep:wasm-bindgen", "dep:js-sys"]

[profile.release]
opt-level = 3


[workspace]
members = [".", "leptos-poc", "api-server", "gen-server", "skins", "shengchen", "loan-server"]
resolver = "2"
