[package]
name = "api-server"
version = "0.1.0"
edition = "2021"
description = "Rust API (Axum) for the form PoC: departments + members, plus static hosting of leptos-poc/dist"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "fs"] }
tower-http = { version = "0.6", features = ["fs"] }
serde_json = "1"
