[package]
name = "gen-server"
version = "0.1.0"
edition = "2021"
description = "Live-generation demo server: chat prompt → Claude CLI in Docker → native wasm-jit validation (self-repair loop) → seed to the browser"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "time", "io-util", "sync"] }
tokio-stream = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tower-http = { version = "0.6", features = ["fs", "set-header"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# native pure compiler + audit — the server validates every generated seed
# by actually compiling it before the browser ever sees it
wasm-jit = { path = "..", default-features = false }
