[package]
name = "leptos-poc"
version = "0.1.0"
edition = "2021"
description = "DynamicCell PoC: runtime-edited scripts compiled to WASM cells driving Leptos signals — dynamic behavior in a pure-Rust CSR app"

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
# default-features = false:只要純編譯器(parser+codegen)——
# 不帶 Rhai 直譯器、不帶 wasm-jit 自己的 wasm-bindgen 匯出(否則整顆 Rhai 被烤進本 app 的 bundle)
wasm-jit = { path = "..", default-features = false }
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
console_error_panic_hook = "0.1"
gloo-net = { version = "0.6", features = ["http"] }
web-sys = { version = "0.3", features = [
    "Window", "Document", "Element", "HtmlCanvasElement", "CanvasRenderingContext2d",
] }
