[package]
name = "loan-server"
version = "0.1.0"
edition = "2021"
description = "Server-side compute twin of apps/form.html: the loan cells (DSL) compile + run natively behind the SAME capability fence; the browser only POSTs {p,r,y} and gets numbers back — the formula never leaves the server."

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# the native pure compiler (parser + codegen + the UI capability fence) — no wasm-bindgen.
# same crate, same UI_IMPORTS the browser uses, so client and server mint byte-identical cells.
wasm-jit = { path = "..", default-features = false }
# a pure-Rust wasm runtime: this is the fence, made real on the server. the linker below
# offers EXACTLY the 6 UI host functions — a cell that reached for anything else could not
# have compiled, and could not link here either.
wasmi = "0.40"
